# real-time-industrial-data-platform

./: .gitignore  Dockerfile  README.md  ingest_data.py  notebook.ipynb  pyproject.toml
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/macros/: fill_sensors.sql  get_sensor_columns.sql  sensor_feature_factory.sql  sensor_tests.sql
dbt/models/: sources.yml
dbt/models/marts/: fact_sensor.sql  schema.yml  sensor_features.sql
dbt/models/staging/: schema.yml  stg_sensor.sql
dbt/tests/: sensor_all_null.sql  sensor_drift.sql  sensor_spike.sql
docs/: api.md  architecture.md  data_model.md  index.md  setup.md
infrastructure/: variables.tf
ingestion/config/: settings.py
ingestion/kafka/: bq_writer.py  processor.py  producer.py  topics.py
ingestion/utils/: transform.py  validation.py
macros/: get_sensor_columns.sql
notebooks/: notebook.ipynb
orchestration/kestra/pipelines/: gcp_config.yaml  gcp_setup.yaml  sensor_bootstrap.yaml  sensor_pipeline.yaml
orchestration/kestra/temp/: sensor_daily_stream_ingestion.yaml
transformation/dbt/: .gitignore  dbt_project.yml
transformation/dbt/macros/: fill_sensors.sql  get_sensor_columns.sql  sensor_feature_factory.sql  sensor_tests.sql
transformation/dbt/models/: sources.yml
transformation/dbt/models/marts/: fact_sensor.sql  schema.yml  sensor_features.sql
transformation/dbt/models/staging/: schema.yml  stg_sensor.sql
transformation/dbt/tests/: sensor_null_test.sql
